chore: Dockerfile 추가 및 컨테이너 배포 환경 설정
  - multi-stage build 기반 Dockerfile 추가 (amazoncorretto:25-alpine)
  - DB 접속 정보를 환경변수 필수화 (기본값 제거)로 환경별 설정 분리
  - .env 파일을 .gitignore에 추가
  - Flyway 의존성을 `spring-boot-starter-flyway`로 교체
  - ArticleSelector: `candidates.getFirst()` 사용 (Java 21+ 스타일)